update build to resolve graalvm issue